<resources>
    <string name="app_name">Udaan 19</string>

    <string name="url_login">https://udaan19-events-api.herokuapp.com/users/login</string>
    <string name="phone_no">Mobile no</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="guest">GUEST</string>
    <string name="forgot_pass">Forgot Password?</string>

    <string name="youtube_channel">https://www.youtube.com/channel/UCnqRgS6O0MGF8sTYb_fHjWA</string>
    <string name="website">https://udaan19.in/#/</string>
    <string name="insta_profile">https://www.instagram.com/teamudaan/</string>
    <string name="facebook_page">https://www.facebook.com/teamudaan19/</string>
    <string name="app_link">http://play.google.com/store/apps/details?id=</string>

    <string name="cat_civil">Builders Of Azkaban</string>
    <string name="cat_cp_it">Chamber Of Coders</string>
    <string name="cat_ec_el">Half Wave Prince</string>
    <string name="cat_non_tech">Scamander\'s Suitcase </string>
    <string name="cat_ee">Order Of Ohms</string>
    <string name="cat_cultural">M.A.D Hollows</string>
    <string name="cat_mech_prod">AutoMotive Philosopher</string>

    <string name="title_activity_about">AboutActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_about_us_acivity">AboutUsAcivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="about_bvm_text">We Birla Vishvakarma Mahavidyalaya(BVM) family take the pride of being the first engineering college in the state of Gujarat, founded in 1948 and inaugurated by last Viceroy of India \"Lord Mountbatten\".</string>
    <string name="about_udaan_text">UDAAN is not just an annual function but a celebration of what the students here are and about their aspirations and dreams. As the name defines it is a joint effort by each one to help provide the flight and wings to the bright ideas of young minds.</string>
    <string name="address">BVM Engineering College, Opp., Shastri Maidan, Mota Bazaar,Vallabh Vidhyanagar, Anand, Gujarat 388120, India</string>
</resources>
