<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:nestedScrollingEnabled="true"
    tools:context=".Activity.AboutActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/about_bvm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="About BVM"
            android:textSize="35dp"
            app:layout_constraintBottom_toTopOf="@+id/about_bvm_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/about_bvm_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/about_bvm_text"
            android:textAlignment="center"
            android:textSize="20dp"
            app:layout_constraintBottom_toTopOf="@+id/about_udaan"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/about_bvm" />

        <TextView
            android:id="@+id/about_udaan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="About Udaan"
            android:textSize="35dp"
            app:layout_constraintBottom_toTopOf="@+id/about_udaan_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/about_bvm_text" />

        <TextView
            android:id="@+id/about_udaan_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/about_udaan_text"
            android:textAlignment="center"
            android:textSize="20dp"
            app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/about_udaan" />


        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="@+id/reach_us_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/about_udaan_text">

            <TextView
                android:id="@+id/contact_us_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20dp"
                android:text="Follow Us"
                android:textSize="35sp" />

            <Button
                android:id="@+id/insta_profile"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_below="@+id/contact_us_text"
                android:background="@drawable/instagram_icon" />

            <Button
                android:id="@+id/facebook_profile"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_below="@+id/contact_us_text"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@+id/insta_profile"
                android:background="@drawable/facebook_icon" />

            <Button
                android:id="@+id/youtube_profile"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_below="@+id/contact_us_text"
                android:layout_marginStart="20dp"
                android:layout_toEndOf="@id/facebook_profile"
                android:background="@drawable/youtube_icon" />

            <Button
                android:id="@+id/website"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_below="@+id/contact_us_text"
                android:layout_marginStart="20dp"
                android:layout_toEndOf="@id/youtube_profile"
                android:background="@drawable/web_icon" />

            <Button
                android:id="@+id/share"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_below="@+id/contact_us_text"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@id/website"
                android:background="@drawable/icon_share" />
        </RelativeLayout>

        <TextView
            android:id="@+id/reach_us_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="Reach Us"
            android:textSize="35dp"
            app:layout_constraintBottom_toTopOf="@+id/address"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

        <TextView
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/address"
            android:textAlignment="center"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reach_us_text" />

    </android.support.constraint.ConstraintLayout>


</ScrollView>